--- a/animes.html
+++ b/animes.html
@@ -17,7 +17,7 @@
         <header class="navbar">
             <div class="content--wrapper">
                 <div class="logo--wrapper">
-                    <img src="./assets/final-short-web-svg.svg" alt="" class="logo--img">
+                    <img src="./final-short-web-svg.svg" alt="" class="logo--img">
                 </div>
                 <div class="links--wrapper">
                     <a href="./index.html" class="link link__hover-effect"><span class="red">Home</span></a>
